# rocket_demo

./: .env  Cargo.toml  compose.yaml
src/: main.rs
src/controllers/: product_controller.rs  user_controller.rs
src/db/: mod.rs  user_ops.rs
src/models/: mod.rs  product.rs  user.rs
