[package]
name = "rocket_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.5", features = ["postgres"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
